Create and include js file inside index.
Create also a new directory tree to better
manage CSS/Javascript files.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>Warehouse Manager</title>
     <!-- CSS file -->
-    <link href="./tpl/style.css" rel="stylesheet" type="text/css" />
+    <link href="tpl/css/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
     <table>
@@ -20,5 +20,6 @@
     </table>
     <br />
     <button name="order_item">Order</button>
+    <script type='text/javascript' src='tpl/js/logic.js'></script>
   </body>
 </html>
