Now, the "Order" button will be disabled, once pressed, until the "Add" button is clicked.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
     <br />
 
-    <button name="order_item" onclick="displayAddOrder()">Order</button>
+    <button id="order_item" onclick="displayAddOrder()">Order</button>
     <script type='text/javascript' src='tpl/js/logic.js'></script>
   </body>
 </html>
