Now the ordered item input field will be cleared on submit.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <br />
     <label>Max Items</label>
     <br/>
-    <input type="text" id="max_items" />
+    <input type="text" value="30" id="max_items" />
     <button id="update_max_items" onclick="updateItemsLimit()">Update</button>
     <script type='text/javascript' src='tpl/js/logic.js'></script>
   </body>
