--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="tpl/css/style.css" rel="stylesheet" type="text/css" />
   </head>
   <body id="body" onload="drawListItem();">
-
+    <h2>Warehouse</h2>
     <div id="new_item">
       <br />
       <input type="text" placeholder="Product Name" id="item_name" />
